--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,132 +1,6 @@
-@charset "utf-8";
 /* common */
-
-
-
-
-
-
 /* header *****************************************************/
-header {
-  width: 100%; height: 10vh;
-  /* background-color: aqua; */
-}
-header h1 {
-  font-size: 2rem;
-  text-align: center;
-  padding-top: 20px;
-}
-header .Pinfo {
-width: 50vw; height: 30px;
-margin: 0 auto;
-margin-top: 20px;
-/* background-color: bisque; */
-
-position: relative;
-}
-header .Pinfo ul {
-  position: absolute;
-  display: flex;
-  top: 50%; left: 50%;
-  transform: translate(-50%, -50%);
-}
-header .Pinfo ul li { 
-  width: 200px;
-}
-
 /* main *****************************************************/
-main {
-  width: 100%; height: 75vh;
-  /* background-color: cadetblue; */
-  position: relative;
-  padding-top: 20px;
-}
-main .main_wrapper {
-  width: 75%;
-  margin: 0 auto;
-  /* background-color: burlywood; */
-  border: 2px solid #ddd;
-  border-radius: 20px;
-  margin-top: 10px;
-}
-main .title {
-  font-size: 1.1rem;
-  /* text-align: center; */
-  /* padding: 20px; */
-  display: grid;
-  height: 60px;
-  grid-template-columns: 1fr 1.6fr;
-  /* width: 80%; */
-  /* background-color: blue; */
-  border-bottom: solid 1px #ddd;
-  text-align: center;
-}
-main .title .title_item1 {
-  border-right: 1px solid #ddd;
-  position: relative;
-  /* background-color: aqua; */
-
-}
-main .title .title_item1 h2 {
-  /* padding-right: 20px; */
-  /* border-right: 1px solid #ddd; */
-  /* background-color: yellow; */
-  position: absolute;
-  top: 50%; left: 50%;
-  transform: translate(-50%, -50%);
-  white-space: nowrap;
-
-}
-main .title .title_item2 {
-  /* background-color: violet; */
-}
-main .title ul {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  /* background-color: tomato; */
-  height: 60px;
-}
-main .title ul li {
-  border-right: 1px solid #ddd;
-  position: relative;
-}
-main .title ul li:last-child {
-  border: none;
-}
-main .title ul li span {
-  /* background-color: brown; */
-  position: absolute;
-  top: 50%; left: 50%;
-  transform: translate(-50%, -50%);
-  white-space: nowrap;
-}
-main .question {
-  font-size: 1.2rem;
-  /* padding: 20px; */
-  display: grid;
-  grid-template-columns: 1fr 1.6fr;
-  height: 60px;
-
-  border-bottom: solid 1px #ddd;
-}
-main .question h2{
-  border-right: 1px solid #ddd;
-  /* background-color: aqua; */
-  padding-left: 20px;
-  display: flex; align-items: center; 
-}
-main .question ul{
-  display: flex;
-  text-align: center;
-  /* background-color: blanchedalmond; */
-  display: flex; align-items: center;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-}
-main .question ul li {
-  /* background-color: blue; */
-
-}
 /* [type="radio"] {
   vertical-align: middle;
   appearance: none;
@@ -147,4 +21,112 @@ main .question ul li {
   box-shadow: 0 0 0 max(4px, 0.2em) lightgray;
   cursor: pointer;
 } */
+* {
+  font-family: "NanumBarunGothic", sans-serif;
+  line-height: 1.2;
+}
 
+header {
+  width: 100%;
+  height: 10vh;
+}
+header h1 {
+  font-size: 2rem;
+  text-align: center;
+  padding-top: 20px;
+}
+header .Pinfo {
+  width: 50vw;
+  height: 30px;
+  margin: 0 auto;
+  margin-top: 20px;
+  position: relative;
+}
+header .Pinfo ul {
+  position: absolute;
+  display: flex;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+header .Pinfo ul li {
+  width: 200px;
+}
+
+main {
+  width: 100%;
+  height: 75vh;
+  position: relative;
+  padding-top: 20px;
+}
+main .main_wrapper {
+  width: 75%;
+  margin: 0 auto;
+  border: 2px solid #ddd;
+  border-radius: 20px;
+  margin-top: 10px;
+}
+main .title {
+  font-size: 1.1rem;
+  display: grid;
+  height: 60px;
+  grid-template-columns: 1fr 1.6fr;
+  border-bottom: solid 1px #ddd;
+  text-align: center;
+}
+main .title .title_item1 {
+  border-right: 1px solid #ddd;
+  position: relative;
+}
+main .title .title_item1 h2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  white-space: nowrap;
+}
+main .title ul {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  height: 60px;
+}
+main .title ul li {
+  border-right: 1px solid #ddd;
+  position: relative;
+}
+main .title ul li:last-child {
+  border: none;
+}
+main .title ul li span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  white-space: nowrap;
+}
+main .question {
+  font-size: 1.0417vw;
+  display: grid;
+  grid-template-columns: 1fr 1.6fr;
+  height: 60px;
+  border-bottom: solid 1px #ddd;
+}
+main .question:last-child {
+  border: none;
+}
+main .question h2 {
+  border-right: 1px solid #ddd;
+  padding-left: 20px;
+  display: flex;
+  align-items: center;
+}
+main .question ul {
+  display: flex;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+/*# sourceMappingURL=style.css.map */
