--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -24,40 +24,46 @@
 * {
   font-family: "NanumBarunGothic", sans-serif;
   line-height: 1.2;
+  box-sizing: border-box;
 }
 
 header {
   width: 100%;
-  height: 10vh;
+  height: 15vh;
+  position: relative;
+  background: url("../images/cont08_bg.jpg") no-repeat 50%/cover;
 }
 header h1 {
   font-size: 2rem;
   text-align: center;
-  padding-top: 20px;
+  padding-top: 40px;
 }
-header .Pinfo {
-  width: 50vw;
-  height: 30px;
+header .item {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+header .item .Pinfo {
+  width: 75%;
+  height: 60px;
+  padding-left: 30px;
   margin: 0 auto;
-  margin-top: 20px;
   position: relative;
 }
-header .Pinfo ul {
+header .item .Pinfo ul {
   position: absolute;
   display: flex;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(0, -50%);
 }
-header .Pinfo ul li {
+header .item .Pinfo ul li {
   width: 200px;
 }
 
 main {
   width: 100%;
-  height: 75vh;
   position: relative;
-  padding-top: 20px;
+  padding: 20px;
 }
 main .main_wrapper {
   width: 75%;
@@ -121,12 +127,56 @@ main .question h2 {
   align-items: center;
 }
 main .question ul {
-  display: flex;
-  text-align: center;
-  display: flex;
-  align-items: center;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
+}
+main .question ul li {
+  border-right: 1px solid #ddd;
+  position: relative;
+}
+main .question ul li:last-child {
+  border: none;
+}
+main .question ul li [type=radio] {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  white-space: nowrap;
+  margin: 0;
+}
+
+article .form-group {
+  margin-bottom: 1rem;
+  position: relative;
+  width: 100%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+article .form-group label {
+  display: inline-block;
+  margin-bottom: 0.5rem;
+}
+article .form-group .form-control {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+article .form-group .form-control:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
 /*# sourceMappingURL=style.css.map */
