--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -22,41 +22,55 @@
   box-shadow: 0 0 0 max(4px, 0.2em) lightgray;
   cursor: pointer;
 } */
+@mixin border-right{
+	
+}
  * {
   font-family: 'NanumBarunGothic', sans-serif;
   line-height: 1.2;
+	box-sizing: border-box;
 }
 header {
 	width: 100%;
-	height: 10vh;
-	h1 {
+	height: 15vh;
+	// background-color: aqua;
+	position: relative;
+	background: url("../images/cont08_bg.jpg") no-repeat 50% / cover;
+	h1{
 		font-size: 2rem;
 		text-align: center;
-		padding-top: 20px;
+		padding-top: 40px;
 	}
-	.Pinfo {
-		width: 50vw;
-		height: 30px;
-		margin: 0 auto;
-		margin-top: 20px;
-		position: relative;
-		ul {
-			position: absolute;
-			display: flex;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			li {
-				width: 200px;
+	.item {
+		width: 100%;
+		position: absolute;
+		bottom: 0;
+		.Pinfo {
+			width: 75%;
+			height: 60px;
+			padding-left: 30px;
+			margin: 0 auto;
+			position: relative;
+			// background-color: #454545;
+			ul {
+				position: absolute;
+				display: flex;
+				top: 50%;
+				transform: translate(0, -50%);
+				// background-color: tomato;
+				li {
+					width: 200px;
+				}
 			}
 		}
 	}
 }
 main {
 	width: 100%;
-	height: 75vh;
+	// height: 75vh;
 	position: relative;
-	padding-top: 20px;
+	// background-color: #80bdff;
+	padding: 20px;
 	.main_wrapper {
 		width: 75%;
 		margin: 0 auto;
@@ -118,12 +132,59 @@ main {
 			align-items: center;
 		}
 		ul {
-			display: flex;
-			text-align: center;
-			display: flex;
-			align-items: center;
 			display: grid;
 			grid-template-columns: repeat(5, 1fr);
+			li {
+				border-right: 1px solid #ddd;
+				position: relative;
+				// background-color: #454545;
+				&:last-child {
+					border: none;
+				}
+			[type="radio"] {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				white-space: nowrap;
+				margin: 0;
+			}
+			}
+		}
+	}
+}
+
+article {
+	.form-group{
+		margin-bottom: 1rem;
+		position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+		label {
+			display: inline-block;
+    	margin-bottom: 0.5rem;
+		}
+		.form-control {
+			display: block;
+			width: 100%;
+			padding: 0.375rem 0.75rem;
+			font-size: 1rem;
+			line-height: 1.5;
+			color: #495057;
+			background-color: #fff;
+			background-clip: padding-box;
+			border: 1px solid #ced4da;
+			border-radius: 0.25rem;
+			transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+			&:focus {
+				color: #495057;
+				background-color: #fff;
+				border-color: #80bdff;
+				outline: 0;
+				box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+			}
 		}
 	}
 }
