--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -34,7 +34,7 @@ header {
   background: url("../images/cont08_bg.jpg") no-repeat 50%/cover;
 }
 header h1 {
-  font-size: 2rem;
+  font-size: 2vw;
   text-align: center;
   padding-top: 40px;
 }
@@ -73,7 +73,7 @@ main .main_wrapper {
   margin-top: 10px;
 }
 main .title {
-  font-size: 1.1rem;
+  font-size: 1.1vw;
   display: grid;
   height: 60px;
   grid-template-columns: 1fr 1.6fr;
@@ -146,6 +146,40 @@ main .question ul li [type=radio] {
   margin: 0;
 }
 
+.main2 {
+  width: 100%;
+  position: relative;
+  padding: 0 20px 20px 20px;
+}
+.main2 .main2_wrapper {
+  height: 500px;
+  width: 75%;
+  margin: 0 auto;
+  border: 2px solid #ddd;
+  border-radius: 20px;
+  margin-top: 10px;
+}
+.main2 .main2_wrapper .week_sleep .title {
+  width: 100%;
+  padding: 20px;
+}
+.main2 .main2_wrapper .week_sleep .title h2 {
+  font-size: 1.5vw;
+}
+.main2 .main2_wrapper .week_sleep .text_question {
+  width: 100%;
+  padding: 20px;
+}
+.main2 .main2_wrapper .week_sleep .text_question ul {
+  font-size: 1.2vw;
+}
+.main2 .main2_wrapper .week_sleep .text_question ul li:first-child {
+  display: flex;
+}
+.main2 .main2_wrapper .week_sleep .text_question ul li select {
+  margin-left: 10px;
+  margin-right: 10px;
+}
 article .form-group {
   margin-bottom: 1rem;
   position: relative;
@@ -162,7 +196,7 @@ article .form-group .form-control {
   display: block;
   width: 100%;
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  font-size: 1vw;
   line-height: 1.5;
   color: #495057;
   background-color: #fff;
