--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -37,7 +37,7 @@ header {
 	position: relative;
 	background: url("../images/cont08_bg.jpg") no-repeat 50% / cover;
 	h1{
-		font-size: 2rem;
+		font-size: 2vw;
 		text-align: center;
 		padding-top: 40px;
 	}
@@ -79,7 +79,7 @@ main {
 		margin-top: 10px;
 	}
 	.title {
-		font-size: 1.1rem;
+		font-size: 1.1vw;
 		display: grid;
 		height: 60px;
 		grid-template-columns: 1fr 1.6fr;
@@ -153,6 +153,55 @@ main {
 		}
 	}
 }
+.main2 {
+	width: 100%;
+	// height: 75vh;
+	position: relative;
+	// background-color: #80bdff;
+	padding:0 20px 20px 20px;
+	.main2_wrapper {
+		height: 500px;
+		width: 75%;
+		margin: 0 auto;
+		border: 2px solid #ddd;
+		border-radius: 20px;
+		margin-top: 10px;
+		.week_sleep {
+			.title {
+				width: 100%;
+				padding: 20px;
+				h2 {
+					font-size: 1.5vw;
+				}
+			}
+			.text_question {
+				width: 100%;
+				padding: 20px;
+				// background-color: #80bdff;
+				ul {
+					font-size: 1.2vw;
+					// background-color: aqua;
+
+					li {
+						&:first-child {
+							display: flex;
+						}
+						select {
+							margin-left: 10px;
+							margin-right: 10px;
+							option {
+								
+							}
+						}
+						label {
+
+						}
+					}
+				}
+			}
+		}
+	}
+}
 
 article {
 	.form-group{
@@ -170,7 +219,7 @@ article {
 			display: block;
 			width: 100%;
 			padding: 0.375rem 0.75rem;
-			font-size: 1rem;
+			font-size: 1vw;
 			line-height: 1.5;
 			color: #495057;
 			background-color: #fff;
