--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -1,7 +1,8 @@
-@charset "utf-8";
-/* common */
-/* header *****************************************************/
-/* main *****************************************************/
+$color_1: #495057;
+$font-family_1: "NanumBarunGothic", sans-serif;
+$background-color_1: #fff;
+$border-color_1: #80bdff;
+
 /* [type="radio"] {
   vertical-align: middle;
   appearance: none;
@@ -22,21 +23,41 @@
   box-shadow: 0 0 0 max(4px, 0.2em) lightgray;
   cursor: pointer;
 } */
-@mixin border-right{
-	
-}
- * {
-  font-family: 'NanumBarunGothic', sans-serif;
-  line-height: 1.2;
+/*# sourceMappingURL=style.css.map */
+* {
+	font-family: $font-family_1;
+	line-height: 1.2;
 	box-sizing: border-box;
 }
-header {
+// width, height값
+@mixin space($width, $height) {
+	width: $width;
+	height: $height;
+}
+// form style 중복값
+@mixin formStyle {
 	width: 100%;
-	height: 15vh;
-	// background-color: aqua;
+	padding: 0.375rem 0.75rem;
+	font-size: 1vw;
+	line-height: 1.5;
+	color: $color_1;
+	background-color: $background-color_1;
+	border: 1px solid #ced4da;
+	border-radius: 0.25rem;
+	transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+	&:focus {
+		color: $color_1;
+		background-color: $background-color_1;
+		border-color: $border-color_1;
+		outline: 0;
+		box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+	}
+}
+header {
+	@include space(100%, 15vh);
 	position: relative;
-	background: url("../images/cont08_bg.jpg") no-repeat 50% / cover;
-	h1{
+	background: url("../images/cont08_bg.jpg") no-repeat 50%/cover;
+	h1 {
 		font-size: 2vw;
 		text-align: center;
 		padding-top: 40px;
@@ -51,13 +72,11 @@ header {
 			padding-left: 30px;
 			margin: 0 auto;
 			position: relative;
-			// background-color: #454545;
 			ul {
 				position: absolute;
 				display: flex;
 				top: 50%;
 				transform: translate(0, -50%);
-				// background-color: tomato;
 				li {
 					width: 200px;
 				}
@@ -67,9 +86,7 @@ header {
 }
 main {
 	width: 100%;
-	// height: 75vh;
 	position: relative;
-	// background-color: #80bdff;
 	padding: 20px;
 	.main_wrapper {
 		width: 75%;
@@ -122,9 +139,9 @@ main {
 		grid-template-columns: 1fr 1.6fr;
 		height: 60px;
 		border-bottom: solid 1px #ddd;
-    &:last-child {
-      border: none;
-    }
+		&:last-child {
+			border: none;
+		}
 		h2 {
 			border-right: 1px solid #ddd;
 			padding-left: 20px;
@@ -137,31 +154,27 @@ main {
 			li {
 				border-right: 1px solid #ddd;
 				position: relative;
-				// background-color: #454545;
 				&:last-child {
 					border: none;
 				}
-			[type="radio"] {
-				position: absolute;
-				top: 50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
-				white-space: nowrap;
-				margin: 0;
-			}
+				[type=radio] {
+					position: absolute;
+					top: 50%;
+					left: 50%;
+					transform: translate(-50%, -50%);
+					white-space: nowrap;
+					margin: 0;
+				}
 			}
 		}
 	}
 }
 .main2 {
 	width: 100%;
-	// height: 75vh;
 	position: relative;
-	// background-color: #80bdff;
-	padding:0 20px 20px 20px;
+	padding: 0 20px 20px 20px;
 	.main2_wrapper {
-		height: 500px;
-		width: 75%;
+		@include space(75%, 500px);
 		margin: 0 auto;
 		border: 2px solid #ddd;
 		border-radius: 20px;
@@ -177,24 +190,29 @@ main {
 			.text_question {
 				width: 100%;
 				padding: 20px;
-				// background-color: #80bdff;
 				ul {
 					font-size: 1.2vw;
-					// background-color: aqua;
-
 					li {
+						padding: 20px;
 						&:first-child {
 							display: flex;
 						}
-						select {
-							margin-left: 10px;
-							margin-right: 10px;
-							option {
-								
+						&:last-child {
+							textarea {
+								@include formStyle();
+								height: 10vh;
+								margin-top: 10px;
 							}
 						}
-						label {
-
+						select {
+							@include formStyle();
+							margin: -10px 10px;
+							width: 80px;
+						}
+						input {
+							@include formStyle();
+							margin: -10px 10px;
+							width: 70px;
 						}
 					}
 				}
@@ -202,18 +220,17 @@ main {
 		}
 	}
 }
-
-article {
-	.form-group{
+/* article {
+	.form-group {
 		margin-bottom: 1rem;
 		position: relative;
-    width: 100%;
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
+		width: 100%;
+		min-height: 1px;
+		padding-right: 15px;
+		padding-left: 15px;
 		label {
 			display: inline-block;
-    	margin-bottom: 0.5rem;
+			margin-bottom: 0.5rem;
 		}
 		.form-control {
 			display: block;
@@ -221,19 +238,19 @@ article {
 			padding: 0.375rem 0.75rem;
 			font-size: 1vw;
 			line-height: 1.5;
-			color: #495057;
-			background-color: #fff;
+			color: $color_1;
+			background-color: $background-color_1;
 			background-clip: padding-box;
 			border: 1px solid #ced4da;
 			border-radius: 0.25rem;
-			transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+			transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 			&:focus {
-				color: #495057;
-				background-color: #fff;
-				border-color: #80bdff;
+				color: $color_1;
+				background-color: $background-color_1;
+				border-color: $border-color_1;
 				outline: 0;
-				box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+				box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 			}
 		}
 	}
-}
+} */
