--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,6 +1,3 @@
-/* common */
-/* header *****************************************************/
-/* main *****************************************************/
 /* [type="radio"] {
   vertical-align: middle;
   appearance: none;
@@ -21,6 +18,7 @@
   box-shadow: 0 0 0 max(4px, 0.2em) lightgray;
   cursor: pointer;
 } */
+
 * {
   font-family: "NanumBarunGothic", sans-serif;
   line-height: 1.2;
@@ -152,8 +150,8 @@ main .question ul li [type=radio] {
   padding: 0 20px 20px 20px;
 }
 .main2 .main2_wrapper {
-  height: 500px;
   width: 75%;
+  height: 500px;
   margin: 0 auto;
   border: 2px solid #ddd;
   border-radius: 20px;
@@ -173,44 +171,106 @@ main .question ul li [type=radio] {
 .main2 .main2_wrapper .week_sleep .text_question ul {
   font-size: 1.2vw;
 }
+.main2 .main2_wrapper .week_sleep .text_question ul li {
+  padding: 20px;
+}
 .main2 .main2_wrapper .week_sleep .text_question ul li:first-child {
   display: flex;
 }
-.main2 .main2_wrapper .week_sleep .text_question ul li select {
-  margin-left: 10px;
-  margin-right: 10px;
-}
-article .form-group {
-  margin-bottom: 1rem;
-  position: relative;
-  width: 100%;
-  min-height: 1px;
-  padding-right: 15px;
-  padding-left: 15px;
-}
-article .form-group label {
-  display: inline-block;
-  margin-bottom: 0.5rem;
-}
-article .form-group .form-control {
-  display: block;
+.main2 .main2_wrapper .week_sleep .text_question ul li:last-child textarea {
   width: 100%;
   padding: 0.375rem 0.75rem;
   font-size: 1vw;
   line-height: 1.5;
   color: #495057;
   background-color: #fff;
-  background-clip: padding-box;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  height: 10vh;
+  margin-top: 10px;
 }
-article .form-group .form-control:focus {
+.main2 .main2_wrapper .week_sleep .text_question ul li:last-child textarea:focus {
   color: #495057;
   background-color: #fff;
   border-color: #80bdff;
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
+.main2 .main2_wrapper .week_sleep .text_question ul li select {
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1vw;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  margin: -10px 10px;
+  width: 80px;
+}
+.main2 .main2_wrapper .week_sleep .text_question ul li select:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+.main2 .main2_wrapper .week_sleep .text_question ul li input {
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1vw;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  margin: -10px 10px;
+  width: 70px;
+}
+.main2 .main2_wrapper .week_sleep .text_question ul li input:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+/* article {
+	.form-group {
+		margin-bottom: 1rem;
+		position: relative;
+		width: 100%;
+		min-height: 1px;
+		padding-right: 15px;
+		padding-left: 15px;
+		label {
+			display: inline-block;
+			margin-bottom: 0.5rem;
+		}
+		.form-control {
+			display: block;
+			width: 100%;
+			padding: 0.375rem 0.75rem;
+			font-size: 1vw;
+			line-height: 1.5;
+			color: $color_1;
+			background-color: $background-color_1;
+			background-clip: padding-box;
+			border: 1px solid #ced4da;
+			border-radius: 0.25rem;
+			transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+			&:focus {
+				color: $color_1;
+				background-color: $background-color_1;
+				border-color: $border-color_1;
+				outline: 0;
+				box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+			}
+		}
+	}
+} */
 
 /*# sourceMappingURL=style.css.map */
